objects/vlocity_cmt__FulfilmentRequestLine__c.object
<CustomObject>
    <description>A line item in the back end order. Refers to Specification (Product2) and, optionally, Asset</description>
    <fields>
        <fullName>vlocity_cmt__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                    <default>true</default>
                    <label>Add</label>
                </value>
                <value>
                    <fullName>Modify</fullName>
                </value>
                <value>
                    <fullName>Disconnect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BillingAccountId</description>
        <inlineHelpText>BillingAccountId</inlineHelpText>
        <label>BillingAccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fulfillment Request Lines</relationshipLabel>
        <relationshipName>FulfillmentRequestLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExpectedCompletionDate__c</fullName>
        <label>Expected Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FulfilmentRequestID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fulfilment Request</description>
        <inlineHelpText>Fulfilment Request</inlineHelpText>
        <label>Fulfilment Request Id</label>
        <referenceTo>vlocity_cmt__FulfilmentRequest__c</referenceTo>
        <relationshipLabel>Fulfillment Request Lines</relationshipLabel>
        <relationshipName>FulfillmentRequestLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InventoryItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>InventoryItemId</description>
        <inlineHelpText>InventoryItemId</inlineHelpText>
        <label>InventoryItemId</label>
        <referenceTo>vlocity_cmt__InventoryItem__c</referenceTo>
        <relationshipLabel>Fulfillment Request Lines</relationshipLabel>
        <relationshipName>FulfillmentRequestLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemNumber__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Fulfilment Request Line Item Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSONAttribute__c</fullName>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LineNumber__c</fullName>
        <description>LineNumber</description>
        <inlineHelpText>LineNumber</inlineHelpText>
        <label>LineNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product</description>
        <inlineHelpText>Product2</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Fulfillment Request Lines</relationshipLabel>
        <relationshipName>FulfillmentRequestLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ServiceAccountId</description>
        <inlineHelpText>ServiceAccountId</inlineHelpText>
        <label>ServiceAccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fulfillment Request Lines (ServiceAccountId)</relationshipLabel>
        <relationshipName>FulfillmentRequestLines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubAction__c</fullName>
        <description>Sub-Action</description>
        <inlineHelpText>Sub-Action</inlineHelpText>
        <label>Sub-Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Move-New</fullName>
                </value>
                <value>
                    <fullName>Move-Disconnect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fulfilment Request Line</label>
    <nameField>
        <displayFormat>FRL{0000000}</displayFormat>
        <label>Fulfilment Request Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment Request Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>